add_executable(Create_Parmeters Create_Parameter.cpp)
add_executable(Thread_Attribute Thread_Attribute.cpp)
add_executable(join_thread join_thread.cpp)
add_executable(detach_thread detach_thread.cpp)
add_executable(cancel_thread cancel_thread.cpp)
add_executable(Mutexe Mutexe.cpp)
add_executable(condition_variable Condition_variable.cpp)
add_executable(Barriers Barriers.cpp)
add_executable(Thread_local_storage Thread_local_storage.cpp)
add_executable(final_code_08 final_code_08.cpp)